# safehold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  build.bat  build.sh  docker-compose.yml  release-prep.bat  release-prep.sh
.github/workflows/: release.yml
src/: app_settings.rs  cli.rs  config.rs  crypto.rs  envops.rs  install.rs  main.rs  master_lock.rs  store.rs  styles.rs  ui.rs
src/cli/: cli.rs  mod.rs
src/core/: config.rs  crypto.rs  mod.rs  store.rs
src/gui/: mod.rs  ui.rs
src/operations/: envops.rs  master_lock.rs  mod.rs
src/utils/: app_settings.rs  install.rs  mod.rs  update_checker.rs
temp_test/: app.key  config.json  version.json
test_upgrade/: app_settings.json  version.json
tests/: cli_basic.rs  cli_export_run.rs  cli_setup_launch.rs  integration_tests.rs
