[package]
name = "safehold"
version = "0.0.1"
edition = "2024"
description = "A secure cross-platform environment variable manager with CLI and optional GUI for encrypted storage of secrets and config."
repository = "https://github.com/muhammad-fiaz/safehold"
homepage = "https://github.com/muhammad-fiaz/safehold"
keywords = ["env-manager", "credential-manager", "password-manager", "encryption", "cli"]
categories = ["command-line-utilities", "cryptography", "gui"]
license = "MIT"
readme = "README.md"
authors = ["Muhammad Fiaz <contact@muhammadfiaz.com>"]

[features]
default = ["cli"]
# Enable building the GUI with `--features gui`
gui = ["dep:eframe", "dep:egui_extras"]
cli = []

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
clap = { version = "4", features = ["derive", "wrap_help", "color"] }
owo-colors = "4"
indicatif = "0.18"
once_cell = "1"
atty = "0.2"
dotenvy = "0.15"
aes-gcm = { version = "0.10", features = ["aes"] }
aes = "0.8"
rand = "0.9"
rand_core = "0.9"
argon2 = "0.5"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
time = { version = "0.3", features = ["formatting"] }
which = "8"
rpassword = "7"
walkdir = "2"
ctrlc = "3"

# GUI-only dependencies (feature gated)
eframe = { version = "0.32", optional = true }
egui_extras = { version = "0.32", optional = true }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
tempfile = "3"
